--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-<header></header>
 
 <head>
   <style>
@@ -8,122 +7,52 @@
       padding: 20px;
     }
   </style>
+  <title>Conditions d'utilisation de Kendeals</title>
 </head>
 
 <body>
+  <h1>Conditions d'utilisation de Kendeals</h1>
+  <p>Bienvenue sur Kendeals, un marché en ligne gratuit pour publier des articles. En utilisant notre plateforme, vous
+    acceptez d'être lié par les conditions d'utilisation suivantes.</p>
+  <h2>1. Utilisation autorisée</h2>
+  <p>Vous pouvez utiliser Kendeals uniquement à des fins légales. Toute utilisation illégale ou interdite par les
+    conditions d'utilisation est strictement interdite.</p>
+  <h2>2. Publication d'annonces</h2>
+  <p>Vous êtes seul responsable de la qualité, de la sécurité, de la légalité et de la description exacte de vos
+    articles publiés sur Kendeals. Vous acceptez de ne pas publier d'annonces illégales ou interdites par les conditions
+    d'utilisation.</p>
+  <h2>3. Propriété intellectuelle</h2>
+  <p>Vous acceptez de ne pas publier sur Kendeals de contenu protégé par des droits d'auteur sans autorisation préalable
+    du propriétaire du droit d'auteur. Kendeals se réserve le droit de retirer tout contenu violant les droits d'auteur
+    sans préavis ni explication.</p>
+  <h2>4. Garantie et responsabilité</h2>
+  <p>Kendeals ne garantit pas l'exactitude des annonces publiées sur sa plateforme. Les vendeurs sont les seuls
+    responsables de la qualité et de la description exacte de leurs articles.</p>
+  <h2>5. Modification des conditions d'utilisation</h2>
+  <p>Kendeals se réserve le droit de modifier les conditions d'utilisation à tout moment sans préavis ni explication.
+    Les modifications seront effectives immédiatement après leur publication sur la plateforme. Il est de votre
+    responsabilité de vérifier régulièrement les conditions d'utilisation pour connaître les modifications.
 
-  <div className='align'>
-    <h4>Introduction</h4>
-    <p>
-      Cet accord de l'utilisateur, Politique de confidentialité de Kendeals, et toutes les politiques affichées sur nos
-      sites définissent les conditions dans lesquelles Kendeals vous offre un accès à et l'utilisation de nos sites,
-      services, applications et outils (collectivement, les «Services»). Toutes les politiques et la politique de
-      confidentialité Kendeals sont incorporées dans le présent Accord de l'utilisateur. Vous vous engagez à respecter
-      l'ensemble des ci-dessus lors de l'accès et l'utilisation de nos services. Ce Contrat d'utilisateur est efficace
-      lors de l'acceptation pour les utilisateurs qui l'acceptent par l'enregistrement d'un compte Kendeals avant le 20
-      Juin 2020.
-    </p>
-    <h4>Utilisation Kendeals</h4>
-    Lors de l'utilisation ou l'accès aux Services Vous n'allez pas le: <br />
-    <li>Poster contenu ou des articles dans des catégories ou domaines inappropriés sur nos sites;</li>
-    <li>Violer ou contourner les lois, les droits des tiers ou nos systèmes, politiques, ou les déterminations de l'état
-      de votre compte;</li>
-    <li>Utiliser nos services si vous n'êtes pas en mesure de former des contrats juridiquement contraignants (par
-      exemple si vous avez moins de 16), ou êtes temporairement ou indéfiniment suspendus de l'utilisation de nos sites,
-      services, applications ou des outils;</li>
-    <li>Poster des faux, inexact, trompeur, diffamatoire ou calomnieux;</li>
-    <li>Prendre toute action qui pourrait compromettre les systèmes de rétroaction ou de notes</li>
-    <li>Distribuer ou envoyer du spam, les communications électroniques non sollicités ou en vrac, des chaînes de
-      lettres, ou des opérations pyramidales;</li>
-
-    <li>Diffuser des virus ou autres technologies qui peuvent nuire Kendeals, ou aux intérêts et biens d'autres
-      utilisateurs de Kendeals;</li>
-
-    <li>Utiliser un robot, spider, scraper ou tout autre moyen automatisé pour accéder à nos services à toute fin;</li>
-
-    <h4>Abuser Kendeals</h4>
-    Sans limiter les autres recours, nous pouvons, de limiter, suspendre ou mettre fin à nos services et des comptes
-    d'utilisateurs, de restreindre ou d'interdire l'accès à, et vos activités sur nos services, retard ou retirer
-    certains contenus hébergés, enlever tout statut spécial associé au compte, de réduire ou d'éliminer les réductions,
-    et prendre des mesures juridiques et techniques pour vous empêcher d'utiliser nos services si:
-    <li>Nous pensons que vous créez des problèmes ou des éventuelles responsabilités légales;</li>
-    <li>Nous pensons que ces restrictions permettront d'améliorer la sécurité de la communauté Kendeals ou réduire
-      l'exposition de notre ou un autre utilisateur Kendeals aux passifs financiers</li>
-    <li>Nous pensons que vous violez les droits de tierces parties;</li>
-    <li>Nous pensons que vous agissez de manière incompatible avec la lettre ou l'esprit de cet accord d'utilisateur ou
-      nos politiques;</li>
-    <li>Malgré nos efforts raisonnables, nous sommes incapables de vérifier ou d'authentifier les informations que vous
-      nous fournissez;</li>
-
-
-    <h4>Frais</h4>
-    <p>
-      Gratuit
-    </p>
-
-    <h4>Conditions d'annonce</h4>
-    <p>
-
-      <li>Chaque article qui est posté sur le site doit avoir au moins une image qui lui est associée.</li>
-
-      <li>Très bonne description du produit</li>
-
-      <li>Description aussi dans quelles conditions le produit est</li>
-
-      <li>La localisation du produit</li>
-
-      <li>Le prix du produit</li>
-    </p>
-
-    <h4>Autorisation pour vous contacter</h4>
-    <p>
-      Vous acceptez de recevoir des appels, y compris autodialed et / ou un message pré-enregistré appelle, de Kendeals
-      à
-      l'un des numéros de téléphone (y compris les numéros de téléphone mobile) que nous avons recueillies pour vous
-      comme
-      autorisé et décrit dans notre politique de confidentialité, y compris les numéros de téléphone que vous nous ont
-      donné, ou que nous avons obtenues de tiers ou recueillies par nos propres efforts. Si le numéro de téléphone que
-      nous avons collectés est un numéro de téléphone mobile, vous acceptez de recevoir des SMS ou autres messages texte
-      à
-      ce numéro. Les frais standard de minutes de téléphone et le texte peuvent s'appliquer si nous vous contactons à un
-      numéro de téléphone . Vous acceptez que nous puissions vous contacter de la manière décrite ci-dessus aux numéros
-      de
-      téléphone que nous avons dans nos dossiers à ces fins:
-    </p>
-
-    <li>Pour vous contacter pour des raisons liées à votre compte ou votre utilisation de nos services (tels que de
-      recouvrer une dette, régler un différend, ou à exécuter autrement notre accord d'utilisateur) ou autorisée par la
-      loi applicable
-    </li>
-    <li>Pour vous contacter pour le marketing, de promotion, ou d'autres raisons que vous avez soit préalablement
-      consenti ou que vous pouvez être amené à consentir à l'avenir. Si vous ne souhaitez pas recevoir de telles
-      communications, vous pouvez opt-out dans la section des préférences de communication de votre compte.
-    </li>
-    <p>
-      Nous pouvons partager vos numéros de téléphone avec nos fournisseurs de services (tels que la facturation ou
-      collections sociétés) qui nous avons contracté avec pour nous aider dans la poursuite de nos droits ou l'exécution
-      de nos obligations en vertu de l'accord de l'utilisateur, nos politiques, ou de tout autre accord, nous pouvons
-      avoir avec vous. Ces fournisseurs de services peuvent également communiquer avec vous en utilisant autodialed ou
-      préenregistrés appels et / ou SMS des messages ou d'autres messages de texte, seulement comme autorisé par nous à
-      la
-      réalisation des buts que nous avons identifiés ci-dessus, et non à leurs propres fins.
-    </p>
-
-    <h4>Dénégation de garantie; Limitation de responsabilité</h4>
-    <p>
-      Nous essayons de garder nos services sûrs, et fonctionne correctement, mais nous ne pouvons pas garantir le
-      fonctionnement continu ou de l'accès à nos services.
-      Vous acceptez que vous faites usage de nos services à vos propres risques, et qu'ils sont fournis pour vous "EN
-      L'ETAT" et "TELS QUE DISPONIBLES". En conséquence, dans la mesure permise par la loi applicable, nous excluons
-      toutes garanties expresses ou implicites, les modalités et conditions, y compris, mais sans s'y limiter, les
-      garanties de qualité marchande, d'adéquation à un usage particulier, et de non-contrefaçon.
-    </p>
-
-    <h4>Frais de vente</h4>
-    <p>
-      Il ne coûte rien (GRATUIT) d'énumérer vos articles.
-    </p>
-  </div>
+  <h2>6. Utilisation des données personnelles</h2>
+  <p>En utilisant Kendeals, vous acceptez que nous puissions collecter, utiliser et partager vos données personnelles
+    conformément à notre politique de confidentialité. Vous pouvez consulter notre <a href="politic.html">politique de
+      confidentialité</a> pour
+    plus de détails sur la façon dont nous utilisons vos données personnelles.</p>
+  <h2>7. Avis de non-responsabilité</h2>
+  <p>Kendeals ne garantit pas la qualité, la sécurité ou la légalité des articles publiés sur sa plateforme. Les
+    vendeurs
+  <h2>8. Résiliation</h2>
+  <p>Kendeals se réserve le droit de résilier votre accès à sa plateforme à tout moment sans préavis ni explication.
+    Vous acceptez que toute résiliation de votre accès puisse entraîner la suppression de toutes les annonces publiées
+    sur Kendeals et de toutes les informations associées. Kendeals ne sera pas responsable de tout dommage ou perte
+    découlant de la résiliation de votre accès à sa plateforme.</p>
+  <h2>9. Dispositions générales</h2>
+  <p>Les conditions d'utilisation constituent l'accord complet entre vous et Kendeals et régissent votre utilisation de
+    la plateforme, remplaçant tout accord précédent entre vous et Kendeals. Si une disposition des conditions
+    d'utilisation est jugée non valide ou inapplicable, cette disposition sera limitée ou supprimée dans la mesure
+    minimale nécessaire et les autres dispositions resteront en vigueur. Les conditions d'utilisation sont régies par
+    les lois de la juridiction applicable et vous acceptez de vous soumettre à la juridiction non exclusive des
+    tribunaux de cette juridiction pour tout litige découlant de votre utilisation de Kendeals.</p>
 </body>
 
 </html>
